# dig-rs

./: .editorconfig  .gitignore  .publish.sh  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  README_CN.md  SECURITY.md  attrs.xml  deny.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  release.yml
crates/dig/: Cargo.toml
crates/dig-core/: Cargo.toml
crates/dig-core/benches/: dns_benchmark.rs
crates/dig-core/examples/: test_cdn.rs  test_dns.rs
crates/dig-core/src/: batch.rs  config.rs  diagnostic.rs  edns.rs  error.rs  lib.rs  lookup.rs  metrics.rs  record.rs  resolver.rs  trace.rs  tsig.rs  zonetransfer.rs
crates/dig-output/: Cargo.toml
crates/dig-output/src/: dig_format.rs  format.rs  json_format.rs  lib.rs  short_format.rs  structured.rs  table_format.rs
crates/dig/src/: main.rs
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  CLI_REFERENCE.md  JSON_SCHEMA.md
homebrew/: formula.rb
tests/: integration_test.rs  record_type_test.rs  transport_test.rs
tests/common/: mod.rs
