[workspace]
resolver = "2"
members = [
    "crates/dig",         # CLI binary
    "crates/dig-core",    # Core DNS library
    "crates/dig-output",  # Output formatting (JSON, table, etc.)
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["dig-rs contributors"]
repository = "https://github.com/dig-rs/dig-rs"
rust-version = "1.75"

[workspace.dependencies]
# DNS library - hickory (formerly trust-dns)
hickory-client = "0.25"
hickory-proto = "0.25"
hickory-resolver = "0.25"
hickory-recursor = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "color", "wrap_help"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform network utilities
socket2 = "0.5"
ipnetwork = "0.20"

# Hex encoding for DNSSEC
hex = "0.4"

# Table formatting
tabled = "0.17"

# Colors
colored = "3"

# Internal crates
dig-core = { path = "crates/dig-core" }
dig-output = { path = "crates/dig-output" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[dev-dependencies]
criterion = "0.5"
serial_test = "3"

[[bench]]
name = "dns_benchmark"
harness = false
