[package]
name = "dig-core"
description = "Core DNS query library for dig-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
hickory-proto.workspace = true
hickory-client.workspace = true
hickory-resolver.workspace = true
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
ipnetwork.workspace = true
hex.workspace = true
base64 = "0.22"
hmac = "0.12"
sha-1 = "0.10"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
