[package]
name = "dig-core"
description = "Core DNS query library for dig-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
hickory-proto.workspace = true
hickory-client.workspace = true
hickory-resolver.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
ipnetwork.workspace = true
hex.workspace = true
base64 = "0.22"
hmac = "0.12"
sha-1 = "0.10"
sha2 = "0.10"

# Modern DNS transports (optional)
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12"] }
rustls-pemfile = { version = "2.1", optional = true }
webpki-roots = { version = "0.26", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls"] }

[features]
default = []
dot = ["tokio-rustls", "rustls", "rustls-pemfile", "webpki-roots"]
doh = ["reqwest"]
modern = ["dot", "doh"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "dns_benchmark"
harness = false
