[package]
name = "dig-output"
description = "Output formatting library for dig-rs (JSON, table, dig-compatible)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tabled.workspace = true
colored.workspace = true
